Setup Docker Compose, containers, nginx, and cleanup code

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,5 +3,7 @@ COPY requirements.txt /
 RUN pip install -r /requirements.txt
 COPY . /app
 WORKDIR /app
+EXPOSE 5000
+ADD . .
 ENTRYPOINT [ "python" ]
 CMD [ "app.py" ]
